Fix width on iPhones.

--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,6 @@
 
 .bible-fullname { font-size: 75%;}
 .j { color: #ff0000;}
+@media screen and (device-aspect-ratio: 2/3) {
+	#verserefbarCont { width: 90px;}
+}
